--- a/style.css
+++ b/style.css
@@ -19,4 +19,39 @@ body{
     margin-top: 10%;
     margin-right: 15px;
     margin-left: 15px;
+    padding: 0 !important;
+}
+
+.alert-window{
+    position: fixed;
+    top: 100px;
+    right: 100px;
+    height: 300px;
+    width: 500px;
+    background-color: white;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    border-radius: 5px;
+    display: none;
+}
+
+.alert-window>button{
+    width: 10%;
+    margin-left: 90%;
+    border: none;
+    background-color: red;
+    color: white;
+}
+
+#alert-message{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.hidden{
+    visibility: hidden;
 }
